--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,18 +2,18 @@
 
 <div class="ui main segment text container">
     <div class="ui huge header">Edit <%= blog.title %></div>
-    <form action="/blogs/<%= blogs._id %>?_method=PUT" class="ui form" method="POST">
+    <form action="/blogs/<%= blog._id %>?_method=PUT" class="ui form" method="POST">
         <div class="field required">
             <label for="">Title</label>
-            <input type="text" name="blog[title]" placeholder="title">
+            <input type="text" name="blog[title]" value="<%= blog.title %>">
         </div>
         <div class="field">
             <label for="">Image</label>
-            <input type="text" name="blog[image]" placeholder="image">
+            <input type="text" name="blog[image]" value="<%= blog.image %>">
         </div>
         <div class="field required">
             <label for="">Blog Content</label>
-            <textarea name="blog[body]" id="" cols="30" rows="10"></textarea>
+            <textarea name="blog[body]" id="" cols="30" rows="10" required><%= blog.body %></textarea>
         </div> 
         <input type="submit" class="ui red button">
     </form>    
