home in header links to blogs

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
             <div class="ui fixed inverted menu">
                 <div class="ui container">
                     <div class="header item"><i class="football ball icon"></i>FF Blog</div>
-                    <a href="" class="item">Home</a>
+                    <a href="/blogs" class="item">Home</a>
                     <a href="" class="item">New Post</a>
                 </div>
             </div>
