new in header links to new blog form

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,6 @@
                 <div class="ui container">
                     <div class="header item"><i class="football ball icon"></i>FF Blog</div>
                     <a href="/blogs" class="item">Home</a>
-                    <a href="" class="item">New Post</a>
+                    <a href="/blogs/new" class="item">New Post</a>
                 </div>
             </div>
