--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <div class="ui huge header">FF Blog</div>
     <div class="ui top attached segment">
         <div class="ui divided items">
-            <% blogs.forEach(function(blog){ %>
+            <% blogs.reverse().forEach(function(blog){ %>
                 <div class="item">
                     <div class="image">
                         <img src="<%= blog.image %>" alt="">
