added links to header

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,5 +11,6 @@
                     <div class="header item"><i class="football ball icon"></i>FF Blog</div>
                     <a href="/blogs" class="item">Home</a>
                     <a href="/blogs/new" class="item">New Post</a>
+                    <a href="/links" class="item">Links</a>
                 </div>
             </div>
