quick links layout added

--- a/views/links.ejs
+++ b/views/links.ejs
@@ -1,5 +1,27 @@
 <% include ./partials/header %>
 
+<div class="ui main container">
+    <div class="ui huge header">FF Blog</div>
+    <div class="ui top attached segment">
+        <div class="ui divided items">
+                <div class="item">
+                    <div class="image">
+                    </div>
+                    <div class="content">
+                        <div class="meta">
+                        </div>
+                        <div class="description">
+                        </div>
+                        <div class="extra">
+                                Read More
+                                <i class="right chevron icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+        </div>
+    </div>
+</div>
 
 
 
