links sample in place

--- a/views/links.ejs
+++ b/views/links.ejs
@@ -1,19 +1,21 @@
 <% include ./partials/header %>
 
 <div class="ui main container">
-    <div class="ui huge header">FF Blog</div>
+    <div class="ui huge header">Favorite FF Links</div>
     <div class="ui top attached segment">
         <div class="ui divided items">
                 <div class="item">
                     <div class="image">
+                        <img src="https://pbs.twimg.com/profile_images/708397005119299584/Wbis9E0t_400x400.jpg" alt="" srcset="">
                     </div>
                     <div class="content">
                         <div class="meta">
                         </div>
                         <div class="description">
+                            <p>Rotoworld Fantasy Football, Fantasy NFL rankings, fantasy Football news, cheat sheets, NFL sleepers and more.</p>
                         </div>
                         <div class="extra">
-                                Read More
+                                Visit site
                                 <i class="right chevron icon"></i>
                             </a>
                         </div>
