second sample for links

--- a/views/links.ejs
+++ b/views/links.ejs
@@ -5,7 +5,7 @@
     <div class="ui top attached segment">
         <div class="ui divided items">
                 <div class="item">
-                    <div class="image">
+                    <div class="ui avatar image">
                         <img src="https://pbs.twimg.com/profile_images/708397005119299584/Wbis9E0t_400x400.jpg" alt="" srcset="">
                     </div>
                     <div class="content">
@@ -21,6 +21,24 @@
                         </div>
                     </div>
                 </div>
+                <div class="item">
+                        <div class="image">
+                            <img src="https://pbs.twimg.com/profile_images/1110348970671386625/7vmrwW99.png" alt="" srcset="">
+                        </div>
+                        <div class="content">
+                            <div class="meta">
+                            </div>
+                            <div class="description">
+                                <p>FantasyPros aggregates and rates fantasy football advice from around the web. View expert accuracy ratings, consensus rankings and start or sit advice.</p>
+                            </div>
+                            <div class="extra">
+                                    Visit site
+                                    <i class="right chevron icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+    
         </div>
     </div>
 </div>
