created links to view fav sites

--- a/views/links.ejs
+++ b/views/links.ejs
@@ -16,13 +16,14 @@
                         </div>
                         <div class="extra">
                                 Visit site
+                            <a href="">
                                 <i class="right chevron icon"></i>
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="item">
-                        <div class="image">
+                        <div class="ui avatar image">
                             <img src="https://pbs.twimg.com/profile_images/1110348970671386625/7vmrwW99.png" alt="" srcset="">
                         </div>
                         <div class="content">
@@ -33,6 +34,7 @@
                             </div>
                             <div class="extra">
                                     Visit site
+                                <a href="">
                                     <i class="right chevron icon"></i>
                                 </a>
                             </div>
