changed layout to links page again

--- a/views/links.ejs
+++ b/views/links.ejs
@@ -3,13 +3,12 @@
 <div class="ui main container">
     <div class="ui huge header">Favorite FF Links</div>
     <div class="ui top attached segment">
-        <div class="ui divided items">
+        <div class="ui list">
                 <div class="item">
-                    <div class="ui avatar image">
-                        <img src="https://pbs.twimg.com/profile_images/708397005119299584/Wbis9E0t_400x400.jpg" alt="" srcset="">
-                    </div>
+                    <img src="https://pbs.twimg.com/profile_images/708397005119299584/Wbis9E0t_400x400.jpg" alt="" srcset="" class="ui avatar image">
                     <div class="content">
-                        <div class="meta">
+                        <div class="header">
+                            <a href="">Rotoworld</a>
                         </div>
                         <div class="description">
                             <p>Rotoworld Fantasy Football, Fantasy NFL rankings, fantasy Football news, cheat sheets, NFL sleepers and more.</p>
@@ -22,12 +21,12 @@
                         </div>
                     </div>
                 </div>
+                <div class="ui divider"></div>
                 <div class="item">
-                        <div class="ui avatar image">
-                            <img src="https://pbs.twimg.com/profile_images/1110348970671386625/7vmrwW99.png" alt="" srcset="">
-                        </div>
+                        <img src="https://pbs.twimg.com/profile_images/1110348970671386625/7vmrwW99.png" alt="" srcset="" class="ui avatar image">
                         <div class="content">
-                            <div class="meta">
+                            <div class="header">
+                                <a href="">FantasyPros</a>
                             </div>
                             <div class="description">
                                 <p>FantasyPros aggregates and rates fantasy football advice from around the web. View expert accuracy ratings, consensus rankings and start or sit advice.</p>
