cleaned up code

--- a/views/links.ejs
+++ b/views/links.ejs
@@ -14,10 +14,7 @@
                             <p>Rotoworld Fantasy Football, Fantasy NFL rankings, fantasy Football news, cheat sheets, NFL sleepers and more.</p>
                         </div>
                         <div class="extra">
-                                Visit site
-                            <a href="">
-                                <i class="right chevron icon"></i>
-                            </a>
+                            <p>Visit site<a href=""><i class="right chevron icon"></i></a></p>
                         </div>
                     </div>
                 </div>
@@ -32,13 +29,10 @@
                                 <p>FantasyPros aggregates and rates fantasy football advice from around the web. View expert accuracy ratings, consensus rankings and start or sit advice.</p>
                             </div>
                             <div class="extra">
-                                    Visit site
-                                <a href="">
-                                    <i class="right chevron icon"></i>
-                                </a>
+                                <p>Visit site<a href=""><i class="right chevron icon"></i></a></p>
                             </div>
                         </div>
-                    </div>
+                </div>
     
         </div>
     </div>
