--- a/views/links.ejs
+++ b/views/links.ejs
@@ -4,6 +4,22 @@
     <div class="ui huge header">Favorite FF Links</div>
     <div class="ui top attached segment">
         <div class="ui list">
+            <% links.forEach(function(link){ %>
+                <div class="item">
+                        <img src="<%= link.image %>" alt="" srcset="" class="ui avatar image">
+                        <div class="content">
+                            <div class="header">
+                                <a href=""><%= link.name %>></a>
+                            </div>
+                            <div class="description">
+                                <p><%= link.description %></p>
+                            </div>
+                            <div class="extra">
+                                <p>Visit site<a href="<%= link.site %>"><i class="right chevron icon"></i></a></p>
+                            </div>
+                        </div>
+                    </div>    
+            <% }) %>
                 <div class="item">
                     <img src="https://pbs.twimg.com/profile_images/708397005119299584/Wbis9E0t_400x400.jpg" alt="" srcset="" class="ui avatar image">
                     <div class="content">
