changed button color on show page

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -12,9 +12,9 @@
         <div class="description">
             <p><%- blog.body %></p>
         </div>
-        <a href="/blogs/<%= blog._id %>/edit" class="ui basic button orange">Edit</a>
+        <a href="/blogs/<%= blog._id %>/edit" class="ui button black">Edit</a>
         <form id="deleteForm" method="POST" action="/blogs/<%= blog._id %>?_method=DELETE">
-            <button class="ui red basic button">Delete</button>
+            <button class="ui red button">Delete</button>
         </form>
     </div>
 </div>
