added href to link name on links page

--- a/views/links.ejs
+++ b/views/links.ejs
@@ -9,7 +9,7 @@
                         <img src="<%= link.image %>" alt="" srcset="" class="ui avatar image">
                         <div class="content">
                             <div class="header">
-                                <a href=""><%= link.name %></a>
+                                <a href="<%= link.site %>"><%= link.name %></a>
                                 <div class="meta right floated">
                                     <small>Added: <%= link.added.toDateString() %></small>
                                 </div>                
