--- a/views/newLinks.ejs
+++ b/views/newLinks.ejs
@@ -1,25 +1,27 @@
 <% include ./partials/header %>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<div class="ui main segment text container">
+    <div class="ui huge header">Add Link</div>
+    <form action="/blogs" class="ui form" method="POST">
+        <div class="field required">
+            <label for="">Name</label>
+            <input type="text" name="link[name]" placeholder="name">
+        </div>
+        <div class="field required">
+            <label for="">URL</label>
+            <input type="text" name="link[url]" placeholder="url">
+        </div>
+        <div class="field required">
+            <label for="">Description</label>
+            <textarea name="link[description]" id="" cols="30" rows="10"></textarea>
+        </div>
+    
+        <div class="field">
+            <label for="">Image</label>
+            <input type="text" name="link[image]" placeholder="image">
+        </div>
+        <input type="submit" class="ui red button">
+    </form>    
+</div>
 
 <% include ./partials/footer %>
