--- a/views/newLinks.ejs
+++ b/views/newLinks.ejs
@@ -2,7 +2,7 @@
 
 <div class="ui main segment text container">
     <div class="ui huge header">Add Link</div>
-    <form action="/blogs" class="ui form" method="POST">
+    <form action="/links" class="ui form" method="POST">
         <div class="field required">
             <label for="">Name</label>
             <input type="text" name="link[name]" placeholder="name">
@@ -14,8 +14,7 @@
         <div class="field required">
             <label for="">Description</label>
             <textarea name="link[description]" id="" cols="30" rows="10"></textarea>
-        </div>
-    
+        </div>   
         <div class="field">
             <label for="">Image</label>
             <input type="text" name="link[image]" placeholder="image">
