--- a/views/links.ejs
+++ b/views/links.ejs
@@ -21,23 +21,11 @@
                                 <p>Visit site<a href="<%= link.site %>"><i class="right chevron icon red"></i></a></p>
                             </div>
                         </div>
+                    </div>
+                    <div class="ui divider">
+
                     </div>    
             <% }) %>
-                <div class="ui divider"></div>
-                <div class="item">
-                        <img src="https://pbs.twimg.com/profile_images/1110348970671386625/7vmrwW99.png" alt="" srcset="" class="ui avatar image">
-                        <div class="content">
-                            <div class="header">
-                                <a href="">FantasyPros</a>
-                            </div>
-                            <div class="description">
-                                <p>FantasyPros aggregates and rates fantasy football advice from around the web. View expert accuracy ratings, consensus rankings and start or sit advice.</p>
-                            </div>
-                            <div class="extra">
-                                <p>Visit site<a href=""><i class="right chevron icon"></i></a></p>
-                            </div>
-                        </div>
-                </div>
     
         </div>
     </div>
