--- a/views/links.ejs
+++ b/views/links.ejs
@@ -26,8 +26,9 @@
 
                     </div>    
             <% }) %>
-    
+        
         </div>
+        <a href="/links/new" class="ui button black">Add New Link</a>
     </div>
 </div>
 
