changed new links button appearance

--- a/views/links.ejs
+++ b/views/links.ejs
@@ -28,7 +28,7 @@
             <% }) %>
         
         </div>
-        <a href="/links/new" class="ui button black">Add New Link</a>
+        <a href="/links/new" class="ui button small red">Add New Link</a>
     </div>
 </div>
 
