changed new links button size

--- a/views/links.ejs
+++ b/views/links.ejs
@@ -26,9 +26,9 @@
 
                     </div>    
             <% }) %>
-        
+            <a href="/links/new" class="ui button fluid red">Add New Link</a>
+
         </div>
-        <a href="/links/new" class="ui button small red">Add New Link</a>
     </div>
 </div>
 
