--- a/views/show.ejs
+++ b/views/show.ejs
@@ -14,7 +14,7 @@
         </div>
         <a href="/blogs/<%= blog._id %>/edit" class="ui button black">Edit</a>
         <form id="deleteForm" method="POST" action="/blogs/<%= blog._id %>?_method=DELETE">
-            <button class="ui red button">Delete</button>
+            <button class="ui red right floated button">Delete</button>
         </form>
     </div>
 </div>
