--- a/views/show.ejs
+++ b/views/show.ejs
@@ -12,7 +12,15 @@
         <div class="description">
             <p><%- blog.body %></p>
         </div>
+        <div class="ui divider">
+
+        </div>    
+    
         <a href="/blogs/<%= blog._id %>/edit" class="ui button fluid black">Edit</a>
+        <div class="ui divider">
+
+        </div>    
+
         <form id="deleteForm" method="POST" action="/blogs/<%= blog._id %>?_method=DELETE">
             <button class="ui red fluid button">Delete</button>
         </form>
