--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <div class="ui main container">
     <div class="ui huge header">FF Blog</div>
     <div class="ui top attached segment">
-        <div class="ui divided items">
+        <div class="ui items">
             <% blogs.reverse().forEach(function(blog){ %>
                 <div class="item">
                     <div class="image">
@@ -24,7 +24,12 @@
                             </a>
                         </div>
                     </div>
+                    
                 </div>
+                <div class="ui horizontal divider">
+                        <i class="football ball icon brown"></i>
+                </div>
+
             <% }) %>
         </div>
     </div>
