added icon divider to links page

--- a/views/links.ejs
+++ b/views/links.ejs
@@ -22,10 +22,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="ui divider">
-
-                    </div>    
-            <% }) %>
+                    <div class="ui horizontal divider">
+                            <i class="football ball icon brown"></i>
+                    </div>
+                <% }) %>
             <a href="/links/new" class="ui button fluid red">Add New Link</a>
 
         </div>
