--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
                             <p><%- blog.body.substring(0, 100) %>.......</p>
                         </div>
                         <div class="extra">
-                            <a href="/blogs/<%= blog._id %>" class="ui floated black button">
+                            <a href="/blogs/<%= blog._id %>" class="ui floated red button">
                                 Read More
                                 <i class="right chevron icon"></i>
                             </a>
