--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,8 +1,8 @@
 <% include ./partials/header %>
 
-<div class="ui main text container segment">
+<div class="ui main text container segment bordered">
     <div class="ui huge header"><%= blog.title %></div>
-    <div class="ui label basic small top right attached">
+    <div class="ui red label floating">
             <span><%= blog.created.toDateString() %></span>
         </div>
 
