changed all borders

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header %>
 
-<div class="ui main text container segment bordered">
+<div class="ui main text container segment">
     <div class="ui huge header"><%= blog.title %></div>
     <div class="ui red label floating">
             <span><%= blog.created.toDateString() %></span>
