--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -6,10 +6,8 @@
     display: inline;
 }
 
-#index-container, #show-container, #links-container  {
-    border: 1px solid darkgray;
-    border-radius: 0%;
-
+.segment\  {
+    border: 1px solid darkgray !important;
 }
 
 
