readded segment line and icon to links page

--- a/views/links.ejs
+++ b/views/links.ejs
@@ -21,6 +21,10 @@
                                 <p>Visit site<a href="<%= link.site %>"><i class="right chevron icon red"></i></a></p>
                             </div>
                         </div>
+                        <div class="ui horizontal divider">
+                                <i class="football ball icon brown"></i>
+                        </div>
+        
                     </div>                <% }) %>
             <a href="/links/new" class="ui button fluid red">Add New Link</a>
 
