added like and dislike button to show page

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -13,6 +13,14 @@
         <div class="description">
             <p><%- blog.body %></p>
         </div>
+        <a class="ui label">
+            Likes
+            <i class="thumbs up icon"></i>
+        </a>
+        <a class="ui label">
+            Dislikes
+            <i class="thumbs down icon"></i>
+        </a>
         <div class="ui horizontal divider">
                 <i class="football ball icon brown"></i>
         </div>
