--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
 <div class="ui main container">
     <div class="ui huge header">FF Blog</div>
-    <div class="ui top attached segment" id="index-container">
+    <div class="ui top attached segment">
         <div class="ui items">
             <% blogs.reverse().forEach(function(blog){ %>
                 <div class="item">
