--- a/views/show.ejs
+++ b/views/show.ejs
@@ -13,15 +13,19 @@
         <div class="description">
             <p><%- blog.body %></p>
         </div>
-        <a class="ui label">
-            Likes
-            <i class="thumbs up icon"></i>
-        </a>
-        <a class="ui label">
-            Dislikes
-            <i class="thumbs down icon"></i>
-        </a>
-        <div class="ui horizontal divider">
+        <div class="likes">
+            <a class="ui label">
+                Likes
+                <i class="thumbs up icon"></i>
+            </a>
+            
+            <a class="ui label">
+                Dislikes
+                <i class="thumbs down icon"></i>
+            </a>
+            
+        </div>
+        <div class="ui horizontal divider seperator">
                 <i class="football ball icon brown"></i>
         </div>
 
