changed new links submit button

--- a/views/newLinks.ejs
+++ b/views/newLinks.ejs
@@ -19,7 +19,7 @@
             <label for="">Image</label>
             <input type="text" name="link[image]" placeholder="image">
         </div>
-        <input type="submit" class="ui red button">
+        <input type="submit" class="ui red fluid button">
     </form>    
 </div>
 
