--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -15,7 +15,7 @@
             <label for="">Blog Content</label>
             <textarea name="blog[body]" id="" cols="30" rows="10" required><%= blog.body %></textarea>
         </div> 
-        <input type="submit" class="ui red button">
+        <input type="submit" class="ui red fluid button">
     </form>    
 </div>
 
