new link url placeholder update

--- a/views/newLinks.ejs
+++ b/views/newLinks.ejs
@@ -17,7 +17,7 @@
         </div>   
         <div class="field">
             <label for="">Image</label>
-            <input type="text" name="link[image]" placeholder="image">
+            <input type="text" name="link[image]" placeholder="image url">
         </div>
         <input type="submit" class="ui red fluid button">
     </form>    
