--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,7 +1,9 @@
 <% include ./partials/header %>
 
-<div class="ui main segment text container">
+<div class="ui main segment text container outercolored">
     <div class="ui huge header">Edit <%= blog.title %></div>
+    <div class="ui top attached segment">
+
     <form action="/blogs/<%= blog._id %>?_method=PUT" class="ui form" method="POST">
         <div class="field">
             <label for="">Title</label>
@@ -16,7 +18,8 @@
             <textarea name="blog[body]" id="" cols="30" rows="10" required><%= blog.body %></textarea>
         </div> 
         <input type="submit" class="ui red fluid button">
-    </form>    
+    </form>   
+    </div> 
 </div>
 
 
