--- a/views/links.ejs
+++ b/views/links.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header %>
 
-<div class="ui main container">
+<div class="ui main container segment outercolored">
     <div class="ui huge header">Favorite FF Links</div>
     <div class="ui top attached segment">
         <div class="ui list">
