--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,7 +1,8 @@
 <% include ./partials/header %>
 
-<div class="ui main segment text container">
+<div class="ui main segment text container outercolored">
     <div class="ui huge header">New Blog Post</div>
+    <div class="ui top attached segment">
     <form action="/blogs" class="ui form" method="POST">
         <div class="field required">
             <label for="">Title</label>
@@ -9,14 +10,15 @@
         </div>
         <div class="field">
             <label for="">Image</label>
-            <input type="text" name="blog[image]" placeholder="image">
+            <input type="text" name="blog[image]" placeholder="image url">
         </div>
         <div class="field required">
             <label for="">Blog Content</label>
             <textarea name="blog[body]" id="" cols="30" rows="10"></textarea>
         </div>
-        <input type="submit" class="ui red button">
-    </form>    
+        <input type="submit" class="ui red fluid button">
+    </form>  
+    </div>  
 </div>
 
 
