--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,12 +1,12 @@
 <% include ./partials/header %>
 
-<div class="ui main text container segment">
+<div class="ui main text container segment outercolored">
     <div class="ui huge header"><%= blog.title %></div>
     <div class="ui red label floating">
             <span><%= blog.created.toDateString() %></span>
         </div>
 
-    <div class="ui top attached">
+    <div class="ui top attached segment">
         <div class="item">
             <img src="<%= blog.image %>" alt="" class="ui centered rounded image">
         </div>
