added seperator icon to new post/link pages

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -16,6 +16,9 @@
             <label for="">Blog Content</label>
             <textarea name="blog[body]" id="" cols="30" rows="10"></textarea>
         </div>
+        <div class="ui horizontal divider seperator">
+                <i class="football ball icon brown"></i>
+        </div>
         <input type="submit" class="ui red fluid button">
     </form>  
     </div>  
