added margin to show-body

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -10,7 +10,7 @@
         <div class="item">
             <img src="<%= blog.image %>" alt="" class="ui centered rounded image">
         </div>
-        <div class="description">
+        <div class="description" id="show-body">
             <p><%- blog.body %></p>
         </div>
         <div class="likes">
