added margin to link description

--- a/views/links.ejs
+++ b/views/links.ejs
@@ -14,7 +14,7 @@
                                     <small>Added: <%= link.added.toDateString() %></small>
                                 </div>                
                             </div>
-                            <div class="description">
+                            <div class="description" id="link-desc">
                                 <p><%= link.description %></p>
                             </div>
                             <div class="extra">
