--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<div class="ui bottom visible inverted sidebar menu">
+<div class="ui bottom visible inverted sidebar menu" id="footer">
 
       </div>
 
