--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,8 +9,8 @@
             <div class="ui fixed inverted menu">
                 <div class="ui container">
                     <div class="header item"><i class="football ball icon"></i>FF Blog</div>
-                    <a href="/blogs" class="item">Home</a>
-                    <a href="/blogs/new" class="item">New Post</a>
+                    <a href="/posts" class="item">Home</a>
+                    <a href="/posts/new" class="item">New Post</a>
                     <a href="/links" class="item">Links</a>
                 </div>
             </div>
