--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,21 +1,21 @@
 <% include ./partials/header %>
 
 <div class="ui main segment text container outercolored">
-    <div class="ui huge header">Edit <%= blog.title %></div>
+    <div class="ui huge header">Edit <%= post.title %></div>
     <div class="ui top attached segment">
 
-    <form action="/blogs/<%= blog._id %>?_method=PUT" class="ui form" method="POST">
+    <form action="/posts/<%= post._id %>?_method=PUT" class="ui form" method="POST">
         <div class="field">
             <label for="">Title</label>
-            <input type="text" name="blog[title]" value="<%= blog.title %>">
+            <input type="text" name="post[title]" value="<%= post.title %>">
         </div>
         <div class="field">
             <label for="">Image</label>
-            <input type="text" name="blog[image]" value="<%= blog.image %>">
+            <input type="text" name="post[image]" value="<%= post.image %>">
         </div>
         <div class="field required">
-            <label for="">Blog Content</label>
-            <textarea name="blog[body]" id="" cols="30" rows="10" required><%= blog.body %></textarea>
+            <label for="">Post Content</label>
+            <textarea name="post[body]" id="" cols="30" rows="10" required><%= post.body %></textarea>
         </div> 
         <input type="submit" class="ui red fluid button">
     </form>   
