--- a/views/show.ejs
+++ b/views/show.ejs
@@ -37,10 +37,23 @@
         <form id="deleteForm" method="POST" action="/posts/<%= post._id %>?_method=DELETE">
             <button class="ui red fluid button">Delete</button>
         </form>
-        <% post.comments.forEach(function(comment){ %>
-            <p><strong><%= comment.author %></strong> - <%= comment.text %> <span><%= comment.added.toDateString() %></span> </p>
-        <% }) %>
-        
+        <div class="ui horizontal divider">
+                <i class="football ball icon brown"></i>
+        </div>
+        <div class="ui text container segment inverted" id="comments-container">
+
+
+            <h3 class="ui header white">Comments</h3>
+            <div class="ui top attached segment">
+                <div class="item">
+
+                    <% post.comments.forEach(function(comment){ %>
+                        <p><%= comment.text %></p>
+                        <p><strong><%= comment.author %></strong> -  <span><%= comment.added.toDateString() %></span> </p>
+                    <% }) %>      
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
