--- a/views/show.ejs
+++ b/views/show.ejs
@@ -40,7 +40,7 @@
         <div class="ui horizontal divider">
                 <i class="football ball icon brown"></i>
         </div>
-        <div class="ui text container segment inverted" id="comments-container">
+        <div class="ui text container segment" id="comments-container">
 
 
             <h3 class="ui header white">Comments</h3>
