fixed container size

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header %>
 
-<div class="ui main text container segment outercolored" id="show-container">
+<div class="ui main container segment outercolored" id="show-container">
     <div class="ui huge header"><%= post.title %></div>
     <div class="ui red label floating">
             <span><%= post.created.toDateString() %></span>
