--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
-<div class="ui bottom visible inverted sidebar menu" id="footer">
+<!-- <div class="ui bottom visible inverted sidebar menu" id="footer">
 
-      </div>
+      </div> -->
 
 
     
