changed main fonts and adjusted box shadow

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,5 +1,12 @@
+
+
 #navbar {
     box-shadow: 5px 10px 5px darkgrey !important;
+    font-family: 'Atletico', slab-serif !important;
+}
+
+.header {
+    font-family: 'Atletico', slab-serif !important;
 
 }
 
@@ -27,7 +34,7 @@
 
 .outercolored {
     background-color: whitesmoke !important;
-    box-shadow: 0 5px 10px 5px darkgrey !important;
+    box-shadow: 0 10px 20px 10px darkgrey !important;
 }
 
 #show-body {
