--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header %>
 
-<div class="ui main container segment outercolored">
+<div class="ui main container segment outercolored" id="index-container">
     <div class="ui huge header">FF Blog</div>
     <div class="ui top attached segment">
         <div class="ui items">
