--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -48,6 +48,7 @@
 #comments-container {
     width: auto;
     background-color: whitesmoke !important;
+    box-shadow: 0 10px 20px 10px darkgrey !important;
 }
 
 #show-container, #index-container {
