--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -54,3 +54,7 @@
 #show-container, #index-container {
     margin-bottom: 70px;
 }
+
+.button {
+    box-shadow: 0 10px 20px 10px darkgrey !important;
+}
