--- a/views/show.ejs
+++ b/views/show.ejs
@@ -14,12 +14,12 @@
             <p><%- post.body %></p>
         </div>
         <div class="likes">
-            <a class="ui label">
+            <a class="ui label button">
                 Likes
                 <i class="thumbs up icon"></i>
             </a>
             
-            <a class="ui label">
+            <a class="ui label button">
                 Dislikes
                 <i class="thumbs down icon"></i>
             </a>
