--- a/views/show.ejs
+++ b/views/show.ejs
@@ -13,13 +13,13 @@
         <div class="description" id="show-body">
             <p><%- post.body %></p>
         </div>
-        <div class="likes">
-            <a class="ui label button">
+        <div class="likes-div">
+            <a class="ui label likes">
                 Likes
                 <i class="thumbs up icon"></i>
             </a>
             
-            <a class="ui label button">
+            <a class="ui label likes">
                 Dislikes
                 <i class="thumbs down icon"></i>
             </a>
