--- a/views/links/new.ejs
+++ b/views/links/new.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/header %>
+<% include ../partials/header %>
 
 <div class="ui main segment text container outercolored">
     <div class="ui huge header">Add Link</div>
@@ -28,4 +28,4 @@
     </div>   
 </div>
 
-<% include ./partials/footer %>
+<% include ../partials/footer %>
