--- a/views/links/show.ejs
+++ b/views/links/show.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/header %>
+<% include ../partials/header %>
 
 <div class="ui main container segment outercolored">
     <div class="ui huge header">Favorite FF Links</div>
@@ -26,7 +26,7 @@
                         </div>
         
                     </div>                <% }) %>
-            <a href="/links/new" class="ui button fluid red">Add New Link</a>
+            <a href="links/new" class="ui button fluid red">Add New Link</a>
 
         </div>
     </div>
@@ -34,4 +34,4 @@
 
 
 
-<% include ./partials/footer %>
+<% include ../partials/footer %>
