--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/header %>
+<% include ../partials/header %>
 
 <div class="ui main segment text container outercolored">
     <div class="ui huge header">Edit <%= post.title %></div>
@@ -23,4 +23,4 @@
 </div>
 
 
-<% include ./partials/footer %>
+<% include ../partials/footer %>
