--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/header %>
+<% include ../partials/header %>
 
 <div class="ui main container segment outercolored" id="index-container">
     <div class="ui huge header">FF Blog</div>
@@ -35,4 +35,4 @@
     </div>
 </div>
     
-<% include ./partials/footer %>
+<% include ../partials/footer %>
