--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/header %>
+<% include ../partials/header %>
 
 <div class="ui main segment text container outercolored">
     <div class="ui huge header">New Blog Post</div>
@@ -25,4 +25,4 @@
 </div>
 
 
-<% include ./partials/footer %>
+<% include ../partials/footer %>
