--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/header %>
+<% include ../partials/header %>
 
 <div class="ui main container segment outercolored" id="show-container">
     <div class="ui huge header"><%= post.title %></div>
@@ -59,4 +59,4 @@
 
 
 
-<% include ./partials/footer %>
+<% include ../partials/footer %>
