--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -23,13 +23,17 @@
     border: none !important;
 }
 
-.likes-div {
+.edit-delete {
     float: right;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
 }
 
-.likes {
-    box-shadow: 0 5px 10px 5px darkgrey !important;
+.likes-div {
+    float: left;
+}
+
+#show-divider {
+    margin: 0 20px !important;
 }
 
 .seperator {
@@ -38,7 +42,7 @@
 
 .outercolored {
     background-color: whitesmoke !important;
-    box-shadow: 0 10px 20px 10px darkgrey !important;
+    box-shadow: 0 5px 5px 5px darkgrey !important;
 }
 
 #show-body {
@@ -52,7 +56,7 @@
 #comments-container {
     width: auto;
     background-color: whitesmoke !important;
-    box-shadow: 0 5px 10px 5px darkgrey !important;
+    box-shadow: 0 5px 5px 5px darkgrey !important;
 }
 
 #show-container, #index-container {
@@ -66,3 +70,6 @@
 input[type="text"], textarea {
     box-shadow: 0 5px 5px 5px darkgrey !important;
 }
+
+
+
