--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -18,16 +18,19 @@
                             <p><%- post.body.substring(0, 100) %>.......</p>
                         </div>
                         <div class="extra">
-                            <a href="/posts/<%= post._id %>" class="ui floated red button">
-                                Read More
-                                <i class="right chevron icon"></i>
+                            <a href="/posts/<%= post._id %>" class="ui animated basic button">
+                                <div class="visible content">Read More</div> 
+                                <div class="hidden content">
+                                    <i class="angle double right icon"></i>
+
+                                </div>
                             </a>
                         </div>
                     </div>
                     
                 </div>
-                <div class="ui horizontal divider">
-                        <i class="football ball icon brown"></i>
+                <div class="ui divider">
+                        <!-- <i class="football ball icon brown"></i> -->
                 </div>
 
             <% }) %>
