--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -18,19 +18,19 @@
                             <p><%- post.body.substring(0, 100) %>.......</p>
                         </div>
                         <div class="extra">
-                            <a href="/posts/<%= post._id %>" class="ui animated basic button">
-                                <div class="visible content">Read More</div> 
-                                <div class="hidden content">
+                            <a href="/posts/<%= post._id %>" class="ui basic button">
+                                Read More
+                            
                                     <i class="angle double right icon"></i>
 
-                                </div>
+                                
                             </a>
                         </div>
                     </div>
                     
                 </div>
-                <div class="ui divider">
-                        <!-- <i class="football ball icon brown"></i> -->
+                <div class="ui divider horizontal">
+                        <i class="football ball icon brown"></i>
                 </div>
 
             <% }) %>
