--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -19,7 +19,7 @@
         <div class="ui horizontal divider seperator">
                 <i class="football ball icon brown"></i>
         </div>
-        <input type="submit" class="ui red fluid button">
+        <input type="submit" class="ui green fluid button">
     </form>  
     </div>  
 </div>
