--- a/views/links/show.ejs
+++ b/views/links/show.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 
-<div class="ui main container segment outercolored">
+<div class="ui main container text segment outercolored" id="links-container">
     <div class="ui huge header">Favorite FF Links</div>
     <div class="ui top attached segment">
         <div class="ui list">
@@ -26,7 +26,7 @@
                         </div>
         
                     </div>                <% }) %>
-            <a href="links/new" class="ui button fluid red">Add New Link</a>
+            <a href="links/new" class="ui button fluid green">Add New Link</a>
 
         </div>
     </div>
