--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 
-<div class="ui main container segment outercolored" id="show-container">
+<div class="ui main container text segment outercolored" id="show-container">
     <div class="ui huge header"><%= post.title %></div>
     <div class="ui red label floating">
             <span><%= post.created.toDateString() %></span>
@@ -53,6 +53,10 @@
                     <% post.comments.forEach(function(comment){ %>
                         <p><%= comment.text %></p>
                         <p><strong><%= comment.author %></strong> -  <span><%= comment.added.toDateString() %></span> </p>
+                        <div class="ui horizontal divider seperator" id="show-divider">
+                                <i class="football ball icon brown"></i>
+                        </div>
+                
                     <% }) %>      
                 </div>
             </div>
